tests/invalid-gd-scripts/apos_docstring.gd
# this is illegal in godot
'''x
'''
# but this is legal
'''x'''
# as this is basically '' 'x' and ''

# thus we recognize '''...''' to later convert it to '...' or so
xxx
